# scarecrovv

./: .gitignore  LICENSE  README.txt  SUMMARY_README_v3.txt  Scarecrovvs realm.docx  cards.csv  file_folder_structure.md  globals.csv  pyproject.toml  scarecrovvs_sim_v3.py  scarecrovvs_sim_v4.py  scarecrovvs_sim_v4_fixed.py  scarecrovvs_sim_v5.py  scarecrovvs_sim_v5_1.py
docs/: Scarecrovv — Intro & Rules (Design + Simulator).md
logs/: game_v4_42_1.jsonl  game_v4_42_10.jsonl  game_v4_42_12.jsonl  game_v4_42_14.jsonl  game_v4_42_15.jsonl  game_v4_42_17.jsonl  game_v4_42_19.jsonl  game_v4_42_2.jsonl  game_v4_42_21.jsonl  game_v4_42_23.jsonl  game_v4_42_3.jsonl  game_v4_42_4.jsonl  game_v4_42_5.jsonl  game_v4_42_6.jsonl  game_v4_42_7.jsonl  game_v4_42_9.jsonl  game_v5_1_42_0.jsonl  game_v5_1_42_1.jsonl  game_v5_1_42_10.jsonl  game_v5_1_42_11.jsonl  game_v5_1_42_13.jsonl  game_v5_1_42_16.jsonl  game_v5_1_42_17.jsonl  game_v5_1_42_18.jsonl  game_v5_1_42_2.jsonl  game_v5_1_42_20.jsonl  game_v5_1_42_21.jsonl  game_v5_1_42_22.jsonl  game_v5_1_42_24.jsonl  game_v5_1_42_25.jsonl  game_v5_1_42_26.jsonl  game_v5_1_42_27.jsonl  game_v5_1_42_28.jsonl  game_v5_1_42_29.jsonl  game_v5_1_42_3.jsonl  game_v5_1_42_30.jsonl  game_v5_1_42_31.jsonl  game_v5_1_42_32.jsonl  game_v5_1_42_33.jsonl  game_v5_1_42_34.jsonl  (+18 more)
src/scarecrovv/: config.py  constants.py
src/scarecrovv/analysis/: report.py  smoke_initiative.py
src/scarecrovv/bots/: greedy.py  mcts.py  policy.py
src/scarecrovv/engine/: actions.py  effects_globals.py  eval.py  loop.py  rounds.py  setup.py
(+9 files in other folders)
