[project]
name = "scarecrovv"
version = "0.0.1"
description = "Scarecrovv's Realm simulator (modular)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
